Revert "feat(data-1513): add useOriginalId feature in LAMASSU and use MDM to generate super ids (disabled by default)"
This reverts commit a77503240c8e61d1b96bbef929d7429871a3a1db.

# Conflicts:
#	src/main/java/org/entur/lamassu/mapper/feedmapper/v2/StationStatusFeedMapper.java